--- a/dev/Test/WatchlistViewer/WatchlistViewer/Resources/LocalStyles.xaml
+++ b/dev/Test/WatchlistViewer/WatchlistViewer/Resources/LocalStyles.xaml
@@ -1,6 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Image x:Shared="False" x:Key="image/16x16/comdirect" Source="/Images/16x16/comdirect.png" SnapsToDevicePixels="True" Width="16" Height="16" />
+    <Image x:Shared="False" x:Key="image/16x16/proxy-on" Source="/Images/16x16/proxy-on.png" SnapsToDevicePixels="True" Width="16" Height="16" />
+    <Image x:Shared="False" x:Key="image/16x16/proxy-off" Source="/Images/16x16/proxy-off.png" SnapsToDevicePixels="True" Width="16" Height="16" />
 
     <LinearGradientBrush x:Key="brush/LightGrayGradientBg" EndPoint="0.5,1" StartPoint="0.5,0">
         <GradientStop Color="#FFFAFAFB" Offset="0"/>
