--- a/dev/Test/WatchlistViewer/WatchlistViewer/UserControls/StockItem.xaml
+++ b/dev/Test/WatchlistViewer/WatchlistViewer/UserControls/StockItem.xaml
@@ -18,8 +18,8 @@
                                       Header="Show Chart ..." />
             </ContextMenu>
         </StackPanel.ContextMenu>
-        <TextBlock FontSize="17" Text="{Binding ShortName}" Foreground="Gray" Margin="5,0,0,0" Width="45" TextAlignment="Right" />
-        <TextBlock FontSize="17" FontWeight="Bold" Text="{Binding ValueFormatted}" Foreground="Black" Margin="2,0,2,0" Width="55" TextAlignment="Right" />
+        <TextBlock FontSize="12" Text="{Binding ShortName}" Foreground="Gray" TextAlignment="Right" Margin="5,0,0,0" />
         <TextBlock Background="{Binding ForeColor}" Width="15" Opacity="0.2" Height="{Binding PixelAbsPercentChangeForUI}" VerticalAlignment="Center" ToolTip="{Binding ToolTipChangePercent}" />
+        <TextBlock FontSize="12" FontWeight="Bold" Text="{Binding ValueFormatted}" Foreground="Black" Margin="2,0,0,0" Width="55" TextAlignment="Left" />
     </StackPanel>
 </UserControl>
