--- a/dev/Test/PdfPrint/PdfPrint/Resources/LocalStyles.xaml
+++ b/dev/Test/PdfPrint/PdfPrint/Resources/LocalStyles.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:PdfPrint.Resources">
-    
+
+    <Image x:Shared="False" x:Key="image/96x96/print" Source="/Images/96x96/print.png" SnapsToDevicePixels="True" Width="96" Height="96" />
+
 </ResourceDictionary>
