--- a/dev/MaterialWpf/AhwToolbar/AhwToolbar/MainWindow.xaml
+++ b/dev/MaterialWpf/AhwToolbar/AhwToolbar/MainWindow.xaml
@@ -3,10 +3,21 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
+        WindowStyle="ToolWindow"
         WindowStartupLocation="CenterScreen"
-        Title="AHW Toolbar" Height="350" Width="525">
-    <Grid>
+        Title="AHW Toolbar" Height="250" Width="325">
+    <Grid VerticalAlignment="Top" Margin="20">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition  Width="Auto"/>
+            <ColumnDefinition  Width="*"/>
+            <ColumnDefinition  Width="Auto"/>
+        </Grid.ColumnDefinitions>
+
+        <materialDesign:PackIcon Kind="Account" Grid.Column="0" Margin="8,0,0,0" VerticalAlignment="Center"></materialDesign:PackIcon>
+        <TextBox Grid.Column="1" Margin="8,0,0,0" VerticalAlignment="Center" />
+        <Button Grid.Column="2" Margin="8,0,0,0" VerticalAlignment="Center">Ok</Button>
         
     </Grid>
 </Window>
