--- a/dev/MaterialWpf/AhwToolbar/AhwToolbar/MainWindow.xaml
+++ b/dev/MaterialWpf/AhwToolbar/AhwToolbar/MainWindow.xaml
@@ -84,6 +84,7 @@
                     </dragablz:TabablzControl>
 
                     <materialDesign:PackIcon Grid.Row="1" Grid.Column="0" Kind="Account" Margin="8,0,0,0" ToolTip="{Binding Name}" VerticalAlignment="Center"></materialDesign:PackIcon>
+                    <!-- ReSharper disable once Xaml.StaticResourceNotResolved -->
                     <TextBox Grid.Row="1" Grid.Column="1" Margin="8,0,0,0" VerticalAlignment="Center" ToolTip="{Binding Name}" 
                              materialDesign:HintAssist.Hint="{Binding Name}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
                     <Button Grid.Row="1" Grid.Column="2" Margin="8,0,0,0" VerticalAlignment="Center">Ok</Button>
