--- a/dev/MaterialWpf/AhwToolbar/AhwToolbar/MainWindow.xaml
+++ b/dev/MaterialWpf/AhwToolbar/AhwToolbar/MainWindow.xaml
@@ -83,11 +83,11 @@
                         </dragablz:TabablzControl.ContentTemplate>
                     </dragablz:TabablzControl>
 
-                    <materialDesign:PackIcon Grid.Row="1" Grid.Column="0" Kind="Account" Margin="8,0,0,0" ToolTip="{Binding Name}" VerticalAlignment="Center"></materialDesign:PackIcon>
+                    <materialDesign:PackIcon Grid.Row="1" Grid.Column="0" Kind="Account" Margin="0,0,0,5" ToolTip="{Binding Name}" VerticalAlignment="Bottom" />
                     <!-- ReSharper disable once Xaml.StaticResourceNotResolved -->
-                    <TextBox Grid.Row="1" Grid.Column="1" Margin="8,0,0,0" VerticalAlignment="Center" ToolTip="{Binding Name}" 
+                    <TextBox Grid.Row="1" Grid.Column="1" Margin="8,0,0,0" VerticalAlignment="Bottom" ToolTip="{Binding Name}" 
                              materialDesign:HintAssist.Hint="{Binding Name}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
-                    <Button Grid.Row="1" Grid.Column="2" Margin="8,0,0,0" VerticalAlignment="Center">Ok</Button>
+                    <Button Grid.Row="1" Grid.Column="2" Margin="8,0,0,0" VerticalAlignment="Bottom">Ok</Button>
 
                 </Grid>
             </DockPanel>
